# miemie-podcast

./: .env.example  .gitignore  AI大赛展示文档.md  README.md  package-lock.json  package.json
apps/web/: next.config.mjs  package.json
apps/web/app/: globals.css  (+1 more)
backend/: pyproject.toml
backend/src/miemie_podcast/: __init__.py  config.py  utils.py
backend/src/miemie_podcast/adapters/auth/: password.py
backend/src/miemie_podcast/adapters/db/: repositories.py  sqlite.py
backend/src/miemie_podcast/adapters/providers/: capabilities.py  qwen.py
backend/src/miemie_podcast/adapters/queue/: db_polling.py
backend/src/miemie_podcast/adapters/sources/: xiaoyuzhou.py
backend/src/miemie_podcast/adapters/storage/: local.py
backend/src/miemie_podcast/api/: app.py  deps.py  schemas.py
backend/src/miemie_podcast/api/routes/: auth.py  episodes.py  jobs.py
backend/src/miemie_podcast/application/: container.py  pipeline.py  presentation.py  prompts.py  services.py
backend/src/miemie_podcast/domain/: models.py
backend/src/miemie_podcast/ports/: __init__.py  repositories.py  services.py
backend/src/miemie_podcast/worker/: main.py  runner.py
backend/src/miemie_podcast_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/tests/: test_analysis_parallelism.py  test_asr_task_confirmation.py  test_auth_service.py  test_pipeline.py  test_presentation.py  test_prompts.py  test_worker_main.py  test_xiaoyuzhou_adapter.py
deploy/systemd/: miemie-api.service  miemie-web.service  miemie-worker.service
scripts/: manage.sh  render-mindmap.mjs
(+5 files in other folders)
