[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "miemie-podcast-backend"
version = "0.1.0"
description = "Backend services for Miemie Podcast"
requires-python = ">=3.9"
dependencies = [
  "beautifulsoup4>=4.12.3",
  "fastapi>=0.115.0",
  "httpx>=0.27.2",
  "pydantic>=2.9.0",
  "python-multipart>=0.0.9",
  "uvicorn>=0.30.6"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

